--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
     	</svg>
     </div>
 
-  <br>
+    <br>
     <br>
     <br>
     <br>
@@ -119,10 +119,12 @@
         }
     </script>
 
-    <p style="color: white; margin-top: 4em; margin-bottom: 4em;">Coded with <span class="heart">❤</span> by <a
-            href="https://www.google.com" target="www.google.com"
-            style="color: white; text-decoration: none; margin-top: 0em; margin-bottom: 0em;">Naynesh Rathod
-    </a></p>
+    <p style="color: white; margin-top: 4em; margin-bottom: 4em;">
+        Tap to Cake<br><br>
+        Coded with <span class="heart">❤</span> by
+        <a href="https://www.linkedin.com/in/nayneshrathod" target="www.google.com"
+                style="color: white; text-decoration: none; margin-top: 0em; margin-bottom: 0em;">Naynesh Rathod
+        </a></p>
 </center>
 
 </body>
