--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,8 +24,8 @@ body {
     display: inline-block;
     font-size: 1em;
     padding: 1em 2em;
-    margin-top: 100px;
-    margin-bottom: 60px;
+    margin-top: 5px;
+    margin-bottom: 6px;
     -webkit-appearance: none;
     appearance: none;
     color: #fff;
@@ -321,3 +321,74 @@ body {
         overflow: hidden;
     }
 }
+
+/*input[type=text] {*/
+/*  width: 20%;*/
+/*  padding: 12px 20px;*/
+/*  margin: 8px 0;*/
+/*  box-sizing: border-box;*/
+/*}*/
+
+
+
+
+
+.form__group {
+  position: relative;
+  padding: 15px 0 0;
+  margin-top: 10px;
+  width: 95%;
+}
+
+.form__field {
+  font-family: inherit;
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid #9b9b9b;
+  outline: 0;
+  font-size: 1.3rem;
+  color: #fff;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+}
+.form__field::placeholder {
+  color: transparent;
+}
+.form__field:placeholder-shown ~ .form__label {
+  font-size: 1.3rem;
+  cursor: text;
+  top: 20px;
+}
+
+.form__label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: #9b9b9b;
+}
+
+.form__field:focus {
+  padding-bottom: 6px;
+  font-weight: 700;
+  border-width: 3px;
+  border-image: linear-gradient(to right, #11998e, #38ef7d);
+  border-image-slice: 1;
+}
+.form__field:focus ~ .form__label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: #11998e;
+  font-weight: 700;
+}
+
+/* reset input */
+.form__field:required, .form__field:invalid {
+  box-shadow: none;
+}
+
