--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet'>
 
 
-{#    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">#}
+    {#    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">#}
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -42,11 +42,11 @@
     </p>
     <p class="xy" style="color: white; font-size: 4rem; margin-bottom: 0em; margin-top: 0em; font-family: 'Lobster';">
         Happy Birthday, {{to}}<!--Replace Michael with the name of birthaywishee!-->
-{#        Happy Birthday, Shyam Bhau <!--Replace Michael with the name of birthaywishee!-->#}
+        {#        Happy Birthday, Shyam Bhau <!--Replace Michael with the name of birthaywishee!-->#}
     </p>
     <h2 class="xyz" style="color: white; margin-top: 0.75em;">
-         - {{ from }}
-{#        - Naynesh Rathod   <!--Replace Sujal Goel with your name!-->#}
+        - {{ from }}
+        {#        - Naynesh Rathod   <!--Replace Sujal Goel with your name!-->#}
     </h2>
 
 
@@ -124,24 +124,61 @@
         }
     </script>
 
-    <p style="color: white; margin-top: 4em; margin-bottom: 4em;">
+    <p style="color: white; margin-top: 4em; margin-bottom: 2em;">
         Tap to Cake<br><br>
         Coded with <span class="heart">❤</span> by
         <a href="https://www.linkedin.com/in/nayneshrathod" target="www.google.com"
            style="color: white; text-decoration: none; margin-top: 0em; margin-bottom: 0em;">Naynesh Rathod
-        </a></p>
-     <form  method="post">
-         {% csrf_token %}
-        <input type="text" class="form-control" name="toname" id="toname"> <br>
-        <input type="text" class="form-control" name="fromname" id="fromname"> <br>
-        <input type="submit" value="submit" class="bubbly-button"> <br>
+        </a>
+    </p>
+    <form method="post">
+        {% csrf_token %}
+        <table>
+            <tr>
+                <td>
+                    <div class="form__group field">
+                        <input type="text" class="form__field" placeholder="toname" name="toname" id='toname' required/>
+                        <label for="toname" class="form__label">To Name</label>
+                    </div>
 
-{#    <button class="bubbly-button" onclick="playAudio(); confetti.start()" ondblclick="confetti.stop(); stopAudio()" style="margin-top: 7rem; margin-bottom: 2.75rem;"><b>Click Me!<b></button>#}
-        </form>
+                </td>
+                <td style="margin-left: 10px;">
+                    <div class="form__group field">
+                        <input type="text" class="form__field" placeholder="fromname" name="fromname" id='fromname'
+                               required/>
+                        <label for="fromname" class="form__label"> From Name</label>
+                    </div>
+
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center">
+                    <br>
+                </td>
+            </tr>
+            <tr>
+
+                <td colspan="2" align="center">
+                    <input type="submit" value="submit" class="bubbly-button"> <br>
+
+                </td>
+            </tr>
+        </table>
+        {#        <input type="text" class="form-control" name="toname" id="toname">#}
+        {#        <input type="text" class="form-control"  style="margin-left: 10px;" name="fromname" id="fromname"> <br>#}
+
+        {#    <button class="bubbly-button" onclick="playAudio(); confetti.start()" ondblclick="confetti.stop(); stopAudio()" style="margin-top: 7rem; margin-bottom: 2.75rem;"><b>Click Me!<b></button>#}
+    </form>
 </center>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
