--- a/templates/index.html
+++ b/templates/index.html
@@ -211,7 +211,7 @@
                 <td colspan="2" align="center">
                     <!-- Sharingbutton Facebook -->
                     <a class="resp-sharing-button__link"
-                       href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwishing-birthday.herokuapp.com%2F"
+                       href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwishing-birthday.herokuapp.com%2F{{ data.slug }}"
                        target="_blank" rel="noopener" aria-label="Facebook">
                         <div class="resp-sharing-button resp-sharing-button--facebook resp-sharing-button--medium">
                             <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
@@ -225,7 +225,7 @@
 
                     <!-- Sharingbutton E-Mail -->
                     <a class="resp-sharing-button__link"
-                       href="mailto:?subject=Super%20fast%20and%20easy%20Social%20Media%20Sharing%20Buttons.%20No%20JavaScript.%20No%20tracking.&amp;body=https%3A%2F%2Fwishing-birthday.herokuapp.com%2F"
+                       href="mailto:?subject=Super%20fast%20and%20easy%20Social%20Media%20Sharing%20Buttons.%20No%20JavaScript.%20No%20tracking.&amp;body=https%3A%2F%2Fwishing-birthday.herokuapp.com%2F{{ data.slug }}"
                        target="_self" rel="noopener" aria-label="E-Mail">
                         <div class="resp-sharing-button resp-sharing-button--email resp-sharing-button--medium">
                             <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
@@ -239,7 +239,7 @@
 
                     <!-- Sharingbutton LinkedIn -->
                     <a class="resp-sharing-button__link"
-                       href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3A%2F%2Fwishing-birthday.herokuapp.com%2F&amp;title=Super%20fast%20and%20easy%20Social%20Media%20Sharing%20Buttons.%20No%20JavaScript.%20No%20tracking.&amp;summary=Super%20fast%20and%20easy%20Social%20Media%20Sharing%20Buttons.%20No%20JavaScript.%20No%20tracking.&amp;source=https%3A%2F%2Fwishing-birthday.herokuapp.com%2F"
+                       href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3A%2F%2Fwishing-birthday.herokuapp.com%2F{{ data.slug }}&amp;title=Super%20fast%20and%20easy%20Social%20Media%20Sharing%20Buttons.%20No%20JavaScript.%20No%20tracking.&amp;summary=Super%20fast%20and%20easy%20Social%20Media%20Sharing%20Buttons.%20No%20JavaScript.%20No%20tracking.&amp;source=https%3A%2F%2Fwishing-birthday.herokuapp.com%2F{{ data.slug }}"
                        target="_blank" rel="noopener" aria-label="LinkedIn">
                         <div class="resp-sharing-button resp-sharing-button--linkedin resp-sharing-button--medium">
                             <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
@@ -253,7 +253,7 @@
 
                     <!-- Sharingbutton WhatsApp -->
                     <a class="resp-sharing-button__link"
-                       href="whatsapp://send?text=Super%20fast%20and%20easy%20Social%20Media%20Sharing%20Buttons.%20No%20JavaScript.%20No%20tracking.%20https%3A%2F%2Fwishing-birthday.herokuapp.com%2F"
+                       href="whatsapp://send?text=Super%20fast%20and%20easy%20Social%20Media%20Sharing%20Buttons.%20No%20JavaScript.%20No%20tracking.%20https%3A%2F%2Fwishing-birthday.herokuapp.com%2F{{ data.slug }}"
                        target="_blank" rel="noopener" aria-label="WhatsApp">
                         <div class="resp-sharing-button resp-sharing-button--whatsapp resp-sharing-button--medium">
                             <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
@@ -267,7 +267,7 @@
 
                     <!-- Sharingbutton Telegram -->
                     <a class="resp-sharing-button__link"
-                       href="https://telegram.me/share/url?text=Super%20fast%20and%20easy%20Social%20Media%20Sharing%20Buttons.%20No%20JavaScript.%20No%20tracking.&amp;url=https%3A%2F%2Fwishing-birthday.herokuapp.com%2F"
+                       href="https://telegram.me/share/url?text=Super%20fast%20and%20easy%20Social%20Media%20Sharing%20Buttons.%20No%20JavaScript.%20No%20tracking.&amp;url=https%3A%2F%2Fwishing-birthday.herokuapp.com%2F{{ data.slug }}"
                        target="_blank" rel="noopener" aria-label="Telegram">
                         <div class="resp-sharing-button resp-sharing-button--telegram resp-sharing-button--medium">
                             <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
