--- a/templates/index.html
+++ b/templates/index.html
@@ -212,23 +212,23 @@
                     {#            <tr>#}
                     {#                <td colspan="2" align="center">#}
                     <!-- Sharingbutton Facebook -->
+
+                    <!-- Sharingbutton Facebook -->
                     <a class="resp-sharing-button__link"
-                       href="https://facebook.com/sharer/sharer.php?u=Dear {{ data.toname }}, {{ data.fromname }} send to you a Birthday wishesh. Check this Url"
-                       target="_blank" rel="noopener" aria-label="Facebook">
-                        <div class="resp-sharing-button resp-sharing-button--facebook resp-sharing-button--medium">
+                       href="https://facebook.com/sharer/sharer.php?u=Dear {{ data.toname }}, {{ data.fromname }} send to you a Birthday wishesh"
+                       target="_blank" rel="noopener" aria-label="">
+                        <div class="resp-sharing-button resp-sharing-button--facebook resp-sharing-button--small">
                             <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                     <path d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"/>
                                 </svg>
                             </div>
-                            {#                            Facebook#}
                         </div>
                     </a>
 
                     <!-- Sharingbutton E-Mail -->
                     <a class="resp-sharing-button__link"
-                       href="mailto:?subject={{ data.wishurl }}&amp;
-                       body=Dear {{ data.toname }}, {{ data.fromname }} send to you a Birthday wishesh. Check this Url "
+                       href="mailto:?subject={{ data.wishurl }}&amp;body=Dear {{ data.toname }}, {{ data.fromname }} send to you a Birthday wishesh. Check this Url "
                        target="_self" rel="noopener" aria-label="E-Mail">
                         <div class="resp-sharing-button resp-sharing-button--email resp-sharing-button--medium">
                             <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
@@ -241,22 +241,19 @@
                     </a>
 
                     <!-- Sharingbutton LinkedIn -->
+                    <!-- Sharingbutton LinkedIn -->
                     <a class="resp-sharing-button__link"
-                       href="https://www.linkedin.com/shareArticle?mini=true&amp;
-                       url= {{ data.wishurl }}&amp;
-                       title= {{ data.fromname }} send to you a wishesh &amp;
-                       summary=Dear {{ data.toname }}, {{ data.fromname }} send to you a Birthday wishesh. Check this Url&amp;
-                       source={{ data.wishurl }}"
-                       target="_blank" rel="noopener" aria-label="LinkedIn">
-                        <div class="resp-sharing-button resp-sharing-button--linkedin resp-sharing-button--medium">
+                       href="https://www.linkedin.com/shareArticle?mini=true&amp;url={{ data.wishurl }}&amp;title={{ data.fromname }} send to you a wishesh&amp;summary=Dear {{ data.toname }}, {{ data.fromname }} send to you a Birthday wishesh. Check this Url&amp;source={{ data.wishurl }}"
+                       target="_blank" rel="noopener" aria-label="">
+                        <div class="resp-sharing-button resp-sharing-button--linkedin resp-sharing-button--small">
                             <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                     <path d="M6.5 21.5h-5v-13h5v13zM4 6.5C2.5 6.5 1.5 5.3 1.5 4s1-2.4 2.5-2.4c1.6 0 2.5 1 2.6 2.5 0 1.4-1 2.5-2.6 2.5zm11.5 6c-1 0-2 1-2 2v7h-5v-13h5V10s1.6-1.5 4-1.5c3 0 5 2.2 5 6.3v6.7h-5v-7c0-1-1-2-2-2z"/>
                                 </svg>
                             </div>
-                            {#                            LinkedIn#}
                         </div>
                     </a>
+
 
                     <!-- Sharingbutton WhatsApp -->
                     <a class="resp-sharing-button__link"
