update share urls

--- a/templates/index.html
+++ b/templates/index.html
@@ -215,7 +215,7 @@
 
                     <!-- Sharingbutton Facebook -->
                     <a class="resp-sharing-button__link"
-                       href="https://facebook.com/sharer/sharer.php?u={{ data.wishurl }}&amp;xhpc_message_text=Dear {{ data.toname }}, {{ data.fromname }} send to you a Birthday wishesh"
+                       href="https://facebook.com/sharer/sharer.php?u={{ data.wishurl }}&amp;xhpc_message==Dear {{ data.toname }}, {{ data.fromname }} send to you a Birthday wishesh&amp;xhpc_message_text=Dear {{ data.toname }}, {{ data.fromname }} send to you a Birthday wishesh"
                        target="_blank" rel="noopener" aria-label="">
                         <div class="resp-sharing-button resp-sharing-button--facebook resp-sharing-button--small">
                             <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
